--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+    app:
+    build: .
+    volumes:
+        - .:/var/www
+    command: >
+        sh -c "
+            chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache &&
+            chmod -R 775 /var/www/storage /var/www/bootstrap/cache &&
+            php-fpm
+        "
     nginx:
         image: nginx:1.21.1
         ports:
